# math101

./: .gitignore  00_START_HERE.ipynb  INSIGHTS.md  LLM_PROMPT.md  README.md  REVIEW.md  math101_template.ipynb  pyproject.toml
00-are-you-ready/: 01_diagnostic.ipynb  README.md
01-seeing-with-code/: 01_visualization_toolbox.ipynb  README.md
02-how-things-scale/: 01_growth_rates_and_big_o.ipynb  02_recurrences_and_master_theorem.ipynb  README.md
03a-transforming-space/: 01_vectors_and_matrices.ipynb  03_graphs_encoded_as_matrices.ipynb  README.md
03b-taming-uncertainty/: 01_randomized_behavior.ipynb  README.md
03c-when-choices-explode/: 01_recursion_trees_and_counting.ipynb  02_dynamic_programming.ipynb  README.md
04-putting-it-together/: 01_complexity_of_randomized_algorithms.ipynb  README.md
capstone/: README.md
src/math101/: __init__.py  algorithms.py  testing.py  tracker.py  viz.py
